Fix aspect ratio problem with big images
Flickr's generated IMG tags all have height and width set. But my CSS
has the max-width: 100% set, so that images will not cause horizontal
scroll. But setting both width/height caused aspect ratio to get
distorted. Rather than changing all the IMG tags, I override the img
height in CSS to be auto.

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -237,10 +237,14 @@ blockquote p:last-child {
 }
 
 /* TODO efung: Don't do this global margin/padding */
+/* I force height here, since Flickr's auto-generated IMG tags
+ * include the width/height in pixels
+ */
 .content img {
   display: block;
   margin: 0 0 0rem;
   max-width: 100%;
+  height: auto !important;
   padding: 0.0rem;
   border: none; /* 1px solid #cccccc;*/
   box-shadow: none; /* 0 0 10px rgba(0, 0, 0, .2); */
